2012-07-16  Andrew Pinski  <apinski@cavium.com>

	* gcc.dg/torture/builtins-1.c: New testcase.

2012-07-13  Andrew Pinski  <apinski@cavium.com>

	* gcc.target/mips/octeon2-pipe-1.c: Use cleanup-rtl-dump
	rather than cleanup-tree-dump.
	* gcc.target/mips/octeon-pipe-1.c: Likewise.

2012-06-05  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/pr53487.c: New test.

2012-04-24  Andrew Pinski  <apinski@cavium.com>

	PR tree-opt/33512
	* gcc.dg/tree-ssa/andor-3.c: New testcase.
	* gcc.dg/tree-ssa/andor-4.c: New testcase.
	* gcc.dg/tree-ssa/andor-5.c: New testcase.

2012-04-23  Andrew Pinski  <apinski@cavium.com>

	* gcc.dg/tree-ssa/forwprop-17.c: New testcase.

2012-03-12  Andrew Pinski  <apinski@cavium.com>

	* gcc.dg/tree-ssa/phi-opt-7.c: New testcase.

2012-03-09  Andrew Pinski  <apinski@cavium.com>

	PR middle-end/51988
	* gcc.dg/tree-ssa/phi-opt-8.c: New testcase.
	* gcc.dg/tree-ssa/phi-opt-9.c: New testcase.

2012-06-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53748
	* gcc.c-torture/compile/pr53748.c: New test.

2012-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.c-torture/execute/20120427-2.c: New testcase.
	* gcc.dg/tree-ssa/phi-opt-10.c: New testcase.
	* gcc.dg/tree-ssa/ssa-pre-28.c: Bypass new optimization.
	* gcc.dg/tree-ssa/ssa-ifcombine-7.c: Look into ifcombine dump.

2012-04-27  Paolo Bonzini  <bonzini@gnu.org>

	PR target/53138
	* gcc.c-torture/execute/20120427-1.c: New testcase.

2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-03-20  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/auto32.C: New.

2012-03-15  Jakub Jelinek  <jakub@redhat.com>
	    Andrew Pinski  <apinski@cavium.com>

	PR middle-end/52592
	* gcc.dg/pr52592.c: New test.

2012-03-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/52582
	* g++.dg/opt/pr52582.C: New test.

2012-03-12  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/52450
	* gcc.dg/torture/pr52402.c: Skip execution on 32-bit hppa*-*-hpux*.
