@@ -1,5 +1,12 @@
 2012-07-16  Andrew Pinski  <apinski@cavium.com>
 
+	* gcc.c-torture/execute/bswap-1.c: New testcase.
+	* gcc.c-torture/compile/unalign-1.c: New testcase.
+	* gcc.c-torture/compile/20120524-1.c: New testcase.
+	* gcc.c-torture/compile/20101216-1.c: New testcase.
+
+2012-07-16  Andrew Pinski  <apinski@cavium.com>
+
 	* gcc.dg/torture/builtins-1.c: New testcase.
 
 2012-07-13  Andrew Pinski  <apinski@cavium.com>
